# ExtendingPython

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands_2.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
ext_with_nanobind/: CMakeLists.txt  add.cc  class.cc  class1.cc  class2.cc  ei_binding.cc  ei_wrapper.cc  narray.cc  narray.cu  object_ownership.cc  test_nanobind.ipynb  test_ownership.py  type_caster.cc
ext_with_pybind11/: README.md  build.sh  ext_module.cc  pybind11.ipynb  template_module.cc  test_ext_module.py  test_tmp_module.py
ext_with_python_c_api/hello_world/: README.md  hello.cc  setup.py  test_hello.py
ext_with_python_c_api/math_api/: README.md  math.cc  setup.py  test_math.py
